Expand sankey digram to rotate on mobile, Bug fixes
- Update site name on readme
- Rewrite .css for mobile-first design
- Expand Sankey diagram to display vertically on mobile
- Fix obsolete fn reference in approval.js
- demoIRV.html:
    - Hide / remove ballot file upload items
    - Move instructions section to after results diagram
    - Add +/- buttons for nCand control
- demoIRVScript.js:
    - Add increment_n() to handle changing nCand and update c-selects
    - Bug fixes in sim_election_2()
- Add style and method specific color to the buttons

--- a/voting-methods/sankey_styles.css
+++ b/voting-methods/sankey_styles.css
@@ -2,8 +2,33 @@
 
 .diagram{
     border: 2px solid #000;
-    width: 100%;
+    margin-bottom: 20px;
 }
+
+@media screen and (max-width: 500px){
+    #results{
+        transform: rotate(90deg);
+        flex-shrink: 0;
+        margin: 110px auto 110px auto;
+    }
+    /*  unrotate the text on all nodes except the exhausted node   */
+    .node:not(.exh) text{   transform: rotate(-90deg);  }
+}
+
+/*
+svg .popup{
+    visibility: hidden;
+    transform: translate(3.5%, -14%) rotate(-90deg);
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 10;
+}
+.node rect:hover ~ .popup{ visibility: visible;    }
+*/
 
 .node rect {
     cursor: pointer;
@@ -13,13 +38,9 @@
   
 .node text {
     pointer-events: none;
-    text-shadow: 0 1px 0 #fff;
+    text-shadow: 0 0 4px #FFF;
+    font: 20px Arial, sans-serif;
 }
 
-.link {
-    fill: none;
-    /*stroke: #000;*/
-    stroke-opacity: .2;
-}
-
+.link { stroke-opacity: .2; }
 .link:hover {   stroke-opacity: .5; }
