--- a/voting-methods/votingMethodStyles.css
+++ b/voting-methods/votingMethodStyles.css
@@ -16,9 +16,9 @@ hr{		margin-bottom: 0.8em;	}
 	}
 }
 
-h3{	margin-top: 0;}
-@media screen and (max-width: 480px){
-	h3{	margin-top: 1em;	}
+h3{	margin-top: 1em;}
+@media screen and (min-width: 500px){
+	h3{	margin-top: 0;	}
 }
 
 h4{
@@ -79,10 +79,11 @@ header :visited, header :link{	color: #000;	}
 	display: flex;
 	background: #fff;
 	align-items: center;
+	flex-direction: column;
 }
 #nav-banner h3{
-	width: 30%;
-	margin: 0 0 0 8px;
+	width: auto;
+	margin: 0;
 }
 #nav-list{
 	display: table;
@@ -91,14 +92,15 @@ header :visited, header :link{	color: #000;	}
 
 .horizontal{
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-evenly;
+	flex-wrap: wrap;
 }
-.horizontal button{	width: 45%;	}
+.horizontal button{	width: 47%;	}
 
-h2{	margin: 10px 0;	}
+h2{	text-align: center;	}
 
 header a{
-	padding: 1em 16px;
+	padding: 4px;
 	text-decoration: none;
 	font-size: 1.17em;
 	display: table-cell;
@@ -113,35 +115,41 @@ header a{
 	color: #fff;
 }
 
-#simple-plurality-link::after{	content: "Simple Plurality";	}
-#approval-link::after{	content: "Approval";	}
-#IRV-link::after{	content: "Instant Runoff / Ranked Choice";	}
+#simple-plurality-link::after{	content: "FPTP";	}
+#approval-link::after{	content: "AV";	}
+#IRV-link::after{	content: "IRV / RCV";	}
 #score-link::after{	content: "Score / Range";	}
-
-@media screen and (max-width: 480px){
-	#nav-banner{	flex-direction: column;}
-	#nav-banner h3{
-		width: auto;
-		margin: 0;
-	}
-	#nav-list a{	padding: 4px;	}
-	#simple-plurality-link::after{	content: "FPTP";	}
-	#approval-link::after{	content: "AV";	}
-	#IRV-link::after{	content: "IRV / RCV";	}
-	#score-link::after{	content: "Score / Range";	}
-	main{	flex-direction: column;	}
-	h2{		text-align: center;	}
-}
 
 main{
 	display: flex;
-	padding: 0 16px;
+	flex-direction: column;
+	padding: 0 10px;
 	justify-content: space-around;
 	flex-wrap: nowrap;
 }
-main > div{	margin: 0 10px 20px 10px;	}
-@media screen and (max-width: 480px){
-	main > div{	margin: 0 0 20px 0;	}
+
+@media screen and (min-width: 500px){
+	#nav-banner{	flex-direction: row;}
+	#nav-banner h3{
+		width: 30%;
+		margin: 0 0 0 8px;
+	}
+	#nav-list a{	padding: 1em 16px;	}
+	#simple-plurality-link::after{	content: "Simple Plurality";	}
+	#approval-link::after{	content: "Approval";	}
+	#IRV-link::after{	content: "Instant Runoff / Ranked Choice";	}
+	main{	flex-direction: row;	}
+	h2{
+		margin: 10px 0;
+		text-align: unset;
+	}
+}
+
+main > div{	margin: 0 0 20px 0;	}
+
+@media screen and (min-width: 500px){
+	main > div{	margin: 0 10px 20px 10px;	}
+	main{	padding: 0 16px;	}
 }
 
 /* Plurality voterInfo / instructions */
@@ -157,7 +165,7 @@ table.plurality{	border-collapse: collapse;	}
 
 #scroll-container{
 	min-width: 200px;	/* this value prevents the table from being hidden */
-	padding: 0 10px 0 0;
+	/*padding: 0 10px 0 0;*/
 	overflow-y: auto;
 	overflow-x: hidden;
 	max-height: 65vh;
@@ -189,7 +197,6 @@ thead [onclick]{	cursor: pointer;	}
 .checkmark{
 	display: inline-block;
 	position: relative;
-
 }
 
 .checkmark::after{
@@ -207,7 +214,7 @@ thead [onclick]{	cursor: pointer;	}
 }
 
 /* 1D spectrum */
-svg{
+.scale{
 	display: block;
 	margin: 8px auto;
 	width: 60%;
@@ -226,31 +233,165 @@ svg > polyline{
 
 /* candidate settings */
 #candidate-settings{
-	min-width: 340px;
+	min-width: auto;
 	max-width: 500px;
 }
 #candidate-settings.plurality{	max-width: 50%;	}
+#table-dir::after{    content: "above";  }
 
-#table-dir::after{    content: "on the left";  }
-@media screen and (max-width: 480px){
-	#table-dir::after{	content: "above";	}
-	#candidate-settings{	min-width: auto;	}
+@media screen and (min-width: 500px){
+	#table-dir::after{	content: "on the left";	}
+	#candidate-settings{	min-width: 340px;	}
 }
 
-#candidate-settings input[type="number"]{	width: 36px;	}
-#cand-count{	margin-bottom: 8px;	}
+#cand-key{	margin-bottom: 10px;	}
+#cand-key h3{
+	margin: 0;
+	border-bottom: 1px solid #000;
+}
+
+.c-controls{
+	display: grid;
+	grid-template: 2.5em auto / 12% auto;
+}
+.cs-title{
+	text-align: center;
+	grid-column: 2 / 3;
+    grid-row: 1 / 2;
+	margin: 0;
+}
+.cs-buttons{
+    grid-column: 1 / 2;
+    grid-row: 1 / 3;
+    width: 40px;	/* should replace with relative value? */
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.cs-buttons input[type="number"]{
+	width: 100%;
+    appearance: textfield;
+    margin: 0 auto;
+    text-align: center;
+	font-size: 20px;
+	box-sizing: border-box;
+}
+.circle{
+    position: relative;
+	flex-shrink: 0;
+    width: 100%;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    background-color: rgb(var(--rgb));
+	cursor: pointer;
+}
+.hbar:before{
+    border-bottom: 3px solid #fff;
+    content: "";
+    position: absolute;
+    display: block;
+    width: 75%;
+    height: 0;
+    left: 12.5%;
+    top: calc(50% - 1.5px);
+}
+.vbar:after{
+    border-right: 3px solid #fff;
+    content: "";
+    position: absolute;
+    display: block;
+    width: 0;
+    height: 75%;
+    left: calc(50% - 1.5px);
+    top: 12.5%;
+}
+/*	Candidate Selects	*/
+.c-select{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	position: relative;
+	width: 15%;
+	/*padding-left: 28px;
+	/*margin-bottom: 12px;*/
+	cursor: pointer;
+	font-size: 22px;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	user-select: none;
+}
 #candidate-selects{
+	grid-column: 2 / 3;
+    grid-row: 2 / 3;
 	padding: 0;	
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
 }
-#candidate-selects > label{	margin: 0 10px;	}
+/*	Custom Checkboxes for the candidates	*/
+.c-select input[type="checkbox"]{
+	position: absolute;
+	opacity: 0;
+	left: 0;
+}
+.checkbox{
+	position: relative;
+	width: 25px;
+	aspect-ratio: 1;
+	background-color: #ddd;
+	border-radius: 5px;
+}
+.checkbox:after {
+	content: "";
+	position: absolute;
+	display: none;
+}
+.c-select .checkbox:after {
+	left: 9px;
+	top: 5px;
+	width: 5px;
+	height: 10px;
+	border: solid white;
+	border-width: 0 3px 3px 0;
+	-webkit-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	transform: rotate(45deg);
+}
+.c-select input:checked ~ .checkbox {	background-color: rgb(var(--rgb));	}
+.c-select input:checked ~ .checkbox:after {	display: block;	}
+.c-select p{
+	margin: 2px 0 0 5px;
+	text-align: center;
+	font-size: 1.3em;
+}
 
+@media screen and (min-width: 500px){
+	.c-controls{	grid-template: auto auto / 30% auto;	}
+	.cs-buttons{
+		flex-direction: row-reverse;
+		width: 100%;
+	}
+	.circle{
+		height: 80%;
+		width: unset;
+	}
+	.c-select{	flex-direction: row;	}
+}
 button{
+	background-color: rgb(var(--rgb));
+	border: 2px solid #4d4d4d;
+	border-radius: 13px;
+	padding: 6px 4%;
+	color: #fff;
+	font-size: 16px;
+	cursor: pointer;
 	width: 60%;
 	margin: 5px auto;
 	display: block;
+}
+.stretch{
+	letter-spacing: 10px;
+	font-size: 20px;
 }
 
 .centered{	text-align: center;	}
